cmake_minimum_required(VERSION 3.8)
project(cpp_arsenal)
set(CMAKE_CXX_STANDARD 11)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

include_directories(src/arsenal)
include_directories(src)

add_subdirectory(src/arsenal)

add_executable(bom-check src/bom-check.cpp)
add_executable(java_util src/java_util.cpp)
add_executable(t0 src/playground/t0.c)
#add_executable(producer_consumer src/playground/producer_consumer.c)
add_executable(semaphores src/playground/semaphores.c src/playground/zemaphores.c)
add_executable(play src/playground/play.cpp)
#add_executable(http src/playground/http.cpp)
add_executable(apue_file src/apue/file.cpp)
add_executable(io src/apue/io.cpp)
add_executable(simple_tcp_daytime_server src/unp/simple_tcp_daytime_server.cpp)
add_executable(simple_tcp_daytime_client src/unp/simple_tcp_daytime_client.cpp)
add_executable(byte_order src/unp/byte_order.cpp)
add_executable(tcp_echo_server src/unp/tcp_echo_server.c)
add_executable(tcp_echo_client src/unp/tcp_echo_client.c)
add_executable(tcp_echo_client_select src/unp/tcp_echo_client_select.c)
add_executable(tcp_echo_server_select src/unp/tcp_echo_server_select.c)
target_link_libraries(bom-check arsenal_static)
target_link_libraries(t0 pthread)
#target_link_libraries(producer_consumer pthread)
target_link_libraries(semaphores pthread)
#target_link_libraries(http curl)